Dobree : SD-17 Footer

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -339,6 +339,10 @@
     margin-top: 4rem !important; // 4rem
 }
 
+.ds44-mb4 {
+    margin-bottom: 4rem !important; // 4rem
+}
+
 .ds44-mtb4 {
     margin-top: 4rem !important; // 4rem
     margin-bottom: 4rem !important; // 4rem
