--- a/framework/scss/components/_footer.scss
+++ b/framework/scss/components/_footer.scss
@@ -82,6 +82,75 @@ footer [role="heading"] {
 
 }
 
+/* ----------------------- */
+/* ==Musée Dobrée Footer           */
+/* ----------------------- */
+
+footer.footer-dobree {
+    border: 0;
+
+    .horairesOuverture {
+        font-size: 1em;
+        color: $ds44-color-base;
+        position: relative;
+        margin-left: 20px;
+
+        &::before {
+           top: 20% !important;
+         }
+    }
+     [role="heading"] {
+         font-weight: bold;
+     }
+     .ds44-list li {
+         margin-bottom: .5rem;
+     }
+     .ds44-footerLink:first-of-type {
+         margin-left:0;
+         padding-left: 0;
+     }
+     .dobree-label {
+         .ds44-logoContainer {
+             border-right : 1px solid $ds44-color-base;
+         }
+         .ds44-logo {
+             margin: 0 2rem;
+             max-width: inherit;
+             width: inherit;
+
+             img {
+                 height: 58px;
+             }
+         }
+     }
+}
+
+@media (max-width: $ds44-large - .0625) {
+    .footer-dobree {
+        .dobree-label {
+            align-items: center;
+
+            & > * {
+                padding: 2rem 0;
+            }
+
+             .ds44-logoContainer {
+                 border-right : none !important;
+                 border-bottom : 1px solid $ds44-color-base;
+             }
+             .ds44-logo {
+                 margin: 0 2rem;
+                 max-width: inherit;
+                 width: inherit;
+
+                 img {
+                     height: 58px;
+                 }
+             }
+         }
+    }
+ }
+
 @media (max-width: $ds44-medium - .0625) {
 
     footer {
@@ -101,6 +170,23 @@ footer [role="heading"] {
     footer .ds44-logo {
         margin-left: auto;
         margin-right: auto;
+    }
+    .footer-dobree {
+        .ds44-list {
+            justify-content:  center;
+        }
+    }
+
+
+}
+
+@media (max-width: $ds44-small - .0625) {
+
+    footer.footer-dobree {
+
+        p.inbl.ds44-mr-std {
+            margin-right: 0;
+        }
     }
 
 }
