--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -4,8 +4,8 @@
             <div class="grid-12-small-1 has-gutter-l ds44-mb4">
                 <div class="col-6-small-1 ds44-mb2">
                     <p class="ds44-mb2">
-                        Musée Dobrée  <br>
-                         18 rue Voltaire,<br>
+                        Musée Dobrée <br>
+                        18 rue Voltaire,<br>
                         44000 Nantes
                     </p>
                     <p class="horairesOuverture ds44-mb1 inbl">Le musée est ouvert aujourd’hui de 8h à 17h</p>
@@ -83,8 +83,8 @@
         </a>
         <div class="ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr">
             <p>Le musée est labellisé :</p>
-            <picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo-qualite-toursime.svg" alt="Logo Qualité Tourisme"></picture>
-            <picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo_Tourisme_Handi.svg" alt="Logo Tourisme et Handicap - République Française"></picture>
+            <a href="#"><picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo-qualite-toursime.svg" alt="Logo Qualité Tourisme"></picture></a>
+            <a href="#"><picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo_Tourisme_Handi.svg" alt="Logo Tourisme et Handicap - République Française"></picture></a>
         </div>
     </section>
 
