--- a/docs/_includes/card/card--text-image.html
+++ b/docs/_includes/card/card--text-image.html
@@ -2,11 +2,12 @@
   <div class="ds44-flex-container ds44-flex-valign-center {{ include.direction }}">
     <div class="ds44-card__section--horizontal--img">
         {% include images/inc-mosaiques_img-base.html srcImg='src="../../assets/images/img_dobree1.jpg"' legend="Légende associée © Copyright" %}
+        <button class="ds44-btnIco ds44-btnIco--carre ds44-bgDark"><i class="icon icon-fullscreen" aria-hidden="true"></i><span class="visually-hidden">Plein écran</span></button>
    </div>
     <div class="ds44-card__section--horizontal">
       <p role="heading" aria-level="{{ include.arialevel }}" class="ds44-card__title">{{ include.title }}</p>
       <p>{{ include.text }}</p>
-      {% if include.bouton %}<p><a class="ds44-btnStd ds44-btn--contextual"><span class="ds44-btnInnerText">{{ include.bouton }}</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>{% endif %}
+      {% if include.bouton %}<p><a class="ds44-btnStd ds44-btn--contextual ds44-mt2"><span class="ds44-btnInnerText">{{ include.bouton }}</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>{% endif %}
     </div>
   </div>
 </section>
