--- a/framework/scss/components/_images.scss
+++ b/framework/scss/components/_images.scss
@@ -351,6 +351,13 @@ figure {
          }
      }
  }
+
+.dobree-img_bandeau {
+     max-height: 380px;
+     width: 100%;
+     object-fit: cover;
+ }
+
 .flag {
     margin-right:10px;
 }
