Dobree : Page les bonnes raisons

--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -558,6 +558,10 @@
         flex-direction: column;
     }
 
+    .ds44-tiny-to-med-noPdg {
+        padding: 0 !important;
+    }
+
 }
 
 @media (max-width: $ds44-small - .0625) {
