--- a/docs/_includes/images/inc-img_bandeau.html
+++ b/docs/_includes/images/inc-img_bandeau.html
@@ -1,1 +1,1 @@
-<img src="../../assets/images/img_musee-back.jpg" alt="" class="dobree-img_bandeau">
+<img src="../../assets/images/img_musee-back.jpg" alt="" class="dobree-img_bandeau ds44-hide-tiny-to-medium">
