--- a/framework/scss/components/_templates.scss
+++ b/framework/scss/components/_templates.scss
@@ -335,6 +335,12 @@ main {
     margin-top: $ds44-large-vmargin;
     margin-bottom: $ds44-large-vmargin;
 }
+.dobree-introduction {
+    font-size: 1.25em;
+    @media (max-width: $ds44-medium - .0625) {
+        font-size: 1em;
+    }
+}
 
 /* Links */
 
