--- a/framework/scss/_libraries/_ds44-utils.scss
+++ b/framework/scss/_libraries/_ds44-utils.scss
@@ -554,6 +554,11 @@
 
     }
 
+    .ds44-flex-dir-reverse,
+     .ds44-card--focus .ds44-flex-container.ds44-flex-dir-reverse {
+        flex-direction: column-reverse;
+    }
+
     .ds44-medium-flex-col { // change l'orientation flex de row à column sur les écrans moyens et petits
         flex-direction: column;
     }
@@ -735,6 +740,10 @@
 
 .ds44-darkContext {
     background-color: $ds44-color-inverse !important;
+}
+
+.ds44-darkText {
+    color: $ds44-color-base !important;
 }
 
 /* === Text utils === */
