--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -70,6 +70,23 @@
     border: none;
   }
 
+  &.dobree-collapser {
+      .ds44-collapser_element{
+          border: 0;
+          margin-bottom: 5px;
+      }
+      .ds44-collapser_button {
+          background: $ds44-contextual-color;
+          font-size: 1.875em;
+          padding: 2rem 3.5rem 2rem 1.5rem;
+          
+          @media (max-width: $medium - .0625) {
+              font-size: 1.25em;
+          }
+      }
+
+  }
+
 }
 
 /* row-like button */
