--- a/framework/scss/components/_onglets.scss
+++ b/framework/scss/components/_onglets.scss
@@ -80,6 +80,35 @@
 
 
 /* =======
+  MUSEE DOBREE ONGLET LATERAL
+  === */
+
+.dobree-ongletsContainer {
+    .ds44-tabs__list {
+      margin: 0 2rem 0 0;
+      padding: 0;
+    }
+    .ds44-tabs__item {
+      align-self: flex-start;
+      display: block;
+      width: 100%;
+      margin-bottom: 10px;
+    }
+    .ds44-tabs__link {
+      padding: 3rem 2rem 3rem 2rem;
+      font-size: 1.25em;
+      text-align: left;
+      font-weight: bold;
+      &:after {
+          display: none;
+      }
+    }
+    .ds44-tabs__linkSelected.ds44-tabs__link, .ds44-tabs__link:hover, .ds44-tabs__link:focus, .ds44-tabs__link:active {
+      background-color: $ds44-contextual-color;
+    }
+}
+
+/* =======
   GENERIC MEDIA QUERIES
   === */
 
