Dobree : fin page Horaire

--- a/framework/scss/_libraries/_base.scss
+++ b/framework/scss/_libraries/_base.scss
@@ -186,27 +186,55 @@ h6, .h6-like {
 
 /* Musée DObrée Title Monotype */
 .h1-like.dobree-title,
-.h2-like.dobree-title {
+.h2-like.dobree-title,
+.h3-like.dobree-title {
     font-family: $ds44-font-family-headingsDobree;
     font-weight: normal;
-
-    &.dobree-title--helvetica {
-        font-family: $ds44-font-family-baseDobree;
-    }
 }
-.h1-like.dobree-title{
-    font-size: 3.5em;
+.h1-like.dobree-title,
+.h2-like.dobree-title {
     line-height: 1.2em;
     margin-bottom: 3rem;
 
     @media (max-width: $ds44-medium - .625) {
-        font-size: 2.5em;
         margin-bottom: 2rem;
     }
     @media (max-width: $ds44-small - .625) {
-        font-size: 1.5em;
         margin-bottom: 1rem;
     }
+}
+.h1-like.dobree-title{
+    font-size: 3.5em;
+
+    @media (max-width: $ds44-medium - .625) {
+        font-size: 2.5em;
+    }
+    @media (max-width: $ds44-small - .625) {
+        font-size: 1.5em;
+    }
+}
+.h2-like.dobree-title{
+    font-size: 2.5em;
+
+    @media (max-width: $ds44-medium - .625) {
+        font-size: 2em;
+    }
+    @media (max-width: $ds44-small - .625) {
+        font-size: 1.25em;
+    }
+}
+.h3-like.dobree-title{
+    font-size: 1.875em;
+
+    @media (max-width: $ds44-medium - .625) {
+        font-size: 1.5em;
+    }
+    @media (max-width: $ds44-small - .625) {
+        font-size: 1.25em;
+    }
+}
+.dobree-title--helvetica {
+    font-family: $ds44-font-family-baseDobree !important;
 }
 
 
