--- a/docs/_includes/card/card--text-image.html
+++ b/docs/_includes/card/card--text-image.html
@@ -5,7 +5,7 @@
         <button class="ds44-btnIco ds44-btnIco--carre ds44-bgDark"><i class="icon icon-fullscreen" aria-hidden="true"></i><span class="visually-hidden">Plein écran</span></button>
    </div>
     <div class="ds44-card__section--horizontal">
-      {% if include.title %}<p role="heading" aria-level="{{ include.arialevel }}" class="ds44-card__title">{{ include.title }}</p>{% endif %}
+      {% if include.title %}<p role="heading" aria-level="{{ include.arialevel }}" class="ds44-card__title h3-like dobree-title dobree-title--helvetica">{{ include.title }}</p>{% endif %}
       {% if include.text %}<p>{{ include.text }}</p>{% endif %}
       {% if include.bouton %}<p><a class="ds44-btnStd ds44-btn--contextual ds44-mt2"><span class="ds44-btnInnerText">{{ include.bouton }}</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>{% endif %}
     </div>
