--- a/framework/scss/components/_buttons.scss
+++ b/framework/scss/components/_buttons.scss
@@ -662,6 +662,12 @@ a.ds44-btnStd--retourPage {
             top: 1px;
         }
     }
+    .dobree-fontSize-20 .horairesOuverture{
+        font-size: 1em;
+        &::before {
+            top: 7px;
+        }
+    }
 
 }
 
