--- a/docs/_includes/boxes/inc-box-alert.html
+++ b/docs/_includes/boxes/inc-box-alert.html
@@ -1,4 +1,4 @@
-<section class="ds44-alertMsg-container txtcenter">
+<section class="ds44-alertMsg-container txtcenter {{include.dobree-alert}}">
     <div class="ds44-collapser center">
         <div class="ds44-collapser_element">
             <p role="heading" aria-level="1">
