--- a/framework/scss/components/_boxes.scss
+++ b/framework/scss/components/_boxes.scss
@@ -312,6 +312,27 @@
         }
       }
     }
+    &.dobree-alert {
+        background-color: #FFF2C3;
+        text-align: left;
+        .ds44-collapser .ds44-card__title .icon::before {
+          color: #D9AA00;
+        }
+        .ds44-collapser .ds44-collapser_element .ds44-collapser_button:focus {
+          border: 2px solid #D9AA00;
+        }
+        .ds44-collapser .ds44-collapser_content {
+          background-color: #FFF2C3;
+          padding: 0 16%;
+        }
+        .ds44-collapser .ds44-collapser_content .ds44-collapser_content--level2 ul.ds44-listDisc {
+          padding-left: 2rem;
+          li {
+              display: list-item;
+              list-style: disc !important;
+          }
+        }
+    }
 }
 
 
