--- a/docs/_includes/composants-transverses/inc-fleche-ancre.html
+++ b/docs/_includes/composants-transverses/inc-fleche-ancre.html
@@ -1,5 +1,5 @@
 <p {{ include.surchargeDS }}>
-    <a href="#" class="flecheAncre">
+    <a href="{% if include.anchor %}{{ include.anchor }}{% else %}#{% endif %}" class="flecheAncre">
         <picture class="">
             <img class="bounce2" src="../../assets/images/fleche-ancre.svg" alt="{% if include.flecheAlt %}{{ include.flecheAlt }}{% else %}Accéder au contenu principal{% endif %}">
         </picture>
