Dobree : fix retour

--- a/docs/_includes/carrousel/carrousel-x3-Dobree.html
+++ b/docs/_includes/carrousel/carrousel-x3-Dobree.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="ds44-mt1">
     <div class="mod--hidden ds44-list swipper-carousel-wrap swipper-carousel-wrap--dobree ds44-posRel" data-nb-visible-slides="3">
         <div class="swiper-container">
             <ul class="swiper-wrapper ds44-list grid-3-small-1 has-gutter-l ds44-carousel-swiper">
@@ -15,7 +15,7 @@
                 <li class="swiper-slide">
                     {% include card/card--dobree.html
                         has-picture="true"
-                        titreTuile="Ceci est la tuile numéro 2"
+                            titreTuile="Ceci est la tuile numéro 2 avec un texte plus long"
                         cardContent='
                         <p class="ds44-docListElem"><i class="icon icon-date ds44-docListIco" aria-hidden="true"></i>24 mai 2024 à 15h</p>
                         <p class="ds44-docListElem"><i class="icon icon-marker ds44-docListIco" aria-hidden="true"></i>Boutique</p>
