--- a/docs/_includes/header/inc-header-musee-dobree.html
+++ b/docs/_includes/header/inc-header-musee-dobree.html
@@ -4,7 +4,6 @@
             <ul class="ds44-list ds44-skiplinks">
                 <li><a href="#content" class="ds44-skiplinks--link">Aller au contenu</a></li>
                 <li><a href="#open-menu" class="ds44-skiplinks--link">Aller au menu</a></li>
-                <li><a href="#open-search" class="ds44-skiplinks--link">Aller à la recherche</a></li>
                 <li><a href="/" class="ds44-skiplinks--link">Aller à la page d'accessibilité</a></li>
             </ul>
             <div class="ds44-flex-container ds44-flex-valign-center">
@@ -18,15 +17,15 @@
                 </div>
                 <div class="ds44-colRight">
                     <div class="inbl dobree-listAccessibility ds44-hide-tinyToLarge">
-                        <a href="#" class="ds44-flex-container ds44-flex-align-center ds44--m-padding">
-                            <span class="">Accessibilité du musée :</span>
+                        <div class="ds44-flex-container ds44-flex-align-center ds44--m-padding">
+                            <a href="#"><span class="">Accessibilité du musée :</span></a>
                             <ul class="ds44-list ds44-flex-container ds44-flex-align-center ds44-fse">
                                 <li><i class="icon icon-handicap-auditif icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap auditif</span></li>
                                 <li><i class="icon icon-handicap-mental icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap mental</span></li>
                                 <li><i class="icon icon-handicap-moteur icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap moteur</span></li>
                                 <li><i class="icon icon-handicap-visuel icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap visuel</span></li>
                             </ul>
-                        </a>
+                        </div>
                     </div>
                     <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-hide-tinyToLarge choixLangue" title="Choisir une langue" aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue">
                         <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : FR - Français"><span class="ds44-btnInnerText" title="Langue sélectionnée : FR - Français">FR</span><i class="icon icon-toggle icon-down icon--medium" aria-hidden="true"></i>
