--- a/docs/_includes/images/inc-video-dobree.html
+++ b/docs/_includes/images/inc-video-dobree.html
@@ -25,15 +25,15 @@
         </div>
 
         <div class="inbl dobree-listAccessibility ds44-hide-large ds44-flex-container">
-            <a href="#" class="ds44-flex-container ds44--m-padding ds44-mt1">
-                <span class="">Accessibilité du musée :</span>
+            <div class="ds44-flex-container ds44--m-padding ds44-mt1">
+                <a href="#"><span class="">Accessibilité du musée :</span></a>
                 <ul class="ds44-list ds44-flex-container ds44-flex-align-center ds44-fse">
                     <li><i class="icon icon-handicap-auditif icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap auditif</span></li>
                     <li><i class="icon icon-handicap-mental icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap mental</span></li>
                     <li><i class="icon icon-handicap-moteur icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap moteur</span></li>
                     <li><i class="icon icon-handicap-visuel icon--sizeL" aria-hidden="true"></i><span class="visually-hidden">Handicap visuel</span></li>
                 </ul>
-            </a>
+            </div>
         </div>
     </div>
     <div class="dobree-video">
