--- a/docs/_includes/card/card--dobree.html
+++ b/docs/_includes/card/card--dobree.html
@@ -1,4 +1,4 @@
-<section class="ds44-card ds44-js-card ds44-card--dobree ds44-box ds44-bgGray">
+<section class="ds44-card ds44-js-card ds44-card--dobree ds44-box ds44-bgGray ds44-container-imgZoom">
     {% if include['has-picture'] == 'true' %}
     <picture class="ds44-container-imgRatio">
       <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class="ds44-imgRatio"/>
@@ -12,6 +12,6 @@
           <p role="heading" aria-level="2" class="h4-like ds44-cardTitle ds44-mb-std" id="{{ include.idTuile }}"><a href="#" class="ds44-card__globalLink">{{ include.titreTuile }}</a></p>
           {{ include.cardContent }}
       </div>
-      <i class="icon icon-long-arrow-right icon--sizeL ds44-cardArrow" aria-hidden="true"></i>
+      <i class="icon icon-long-arrow-right icon--sizeM ds44-cardArrow" aria-hidden="true"></i>
     </div>
 </section>
