--- a/framework/scss/_config/_variables.scss
+++ b/framework/scss/_config/_variables.scss
@@ -109,8 +109,8 @@ $ds44-font-sizes: (
     desktop : 1.125em   // 18px
   ),
   button: (
-    mobile  : .875em,   // 14px
-    desktop : .875em    // 14px
+    mobile  : 1em,   // 16px
+    desktop : 1em    // 16px
   ),
   largeButton: (
     mobile  : 1em,      // 16px
