--- a/docs/_includes/header/inc-header-musee-dobree.html
+++ b/docs/_includes/header/inc-header-musee-dobree.html
@@ -27,9 +27,20 @@
                             </ul>
                         </div>
                     </div>
-                    <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-hide-tinyToLarge choixLangue" title="Choisir une langue" aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue">
-                        <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : FR - Français"><span class="ds44-btnInnerText" title="Langue sélectionnée : FR - Français">FR</span><i class="icon icon-toggle icon-down icon--medium" aria-hidden="true"></i>
+                    <button class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-hide-tinyToLarge choixLangue"  aria-controls="menu" data-open-sub-menu="#subMenu-choixLangue" title="Choisir une langue - langue sélectionnée : Français - FR">
+                        <img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="langue sélectionnée : Français - FR"><span class="ds44-btnInnerText">FR</span><i class="icon icon-toggle icon--medium icon-up" aria-hidden="true"></i>
                     </button>
+                    <div id="subMenu-choixLangue" class="ds44-subMenu" data-sub-menu="">
+                        <p role="heading" aria-level="1" class="visually-hidden">Choix de la langue</p>
+                        <ul class="ds44-list">
+                            <li>
+                                <a href="#" class="ds44-tmpFirstFocus"><img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : Français">FR</a>
+                            </li>
+                            <li>
+                                <a href="#" class="ds44-tmpLastFocus" lang="en"><img class="flag"  src="../../assets/icons/icon-flag-en.svg" alt="Language : English">EN</a>
+                            </li>
+                        </ul>
+                    </div>
                     <a href="#" class="ds44-btn--menu ds44-btn--contextual ds44-btnIcoText--maxi ds44--xl-padding"><span class="ds44-btnInnerText">Billetterie</span><i class="icon icon-long-arrow-right icon--large" aria-hidden="true"></i></a>
                     <button type="button" class="ds44-btn--menu ds44-btnIcoText--maxi ds44--xl-padding ds44-btn--invert" aria-label="Ouvrir le menu de navigation" aria-controls="menu" data-open-overlay="true" id="open-menu">
                         <span class="ds44-btnInnerText">Menu</span><i class="icon icon-burger icon--large" aria-hidden="true"></i>
@@ -37,17 +48,7 @@
                 </div>
             </div>
         </div>
-        <div id="subMenu-choixLangue" class="ds44-subMenu" data-sub-menu="" aria-hidden="true">
-            <p role="heading" aria-level="1" class="visually-hidden">Choix de la langue</p>
-            <ul class="ds44-list">
-                <li>
-                    <a href="#"><img class="flag" src="../../assets/icons/icon-flag-fr.svg" alt="Langue : FR - Français">Français</a>
-                </li>
-                <li>
-                    <a href="#"><img class="flag" lang="en" src="../../assets/icons/icon-flag-en.svg" alt="Language : EN - English">English</a>
-                </li>
-            </ul>
-        </div>
+
         {% include menu/inc-menu-dobree.html %}
     </div>
 </header>
