--- a/framework/scss/components/_header.scss
+++ b/framework/scss/components/_header.scss
@@ -101,7 +101,7 @@
 .ds44-subMenu {
     position:fixed;
     background: $ds44-light-color;
-    display:block;
+    display:none;
     opacity: 0;
     pointer-events: none;
     box-shadow: 0px 13px 20px 0px rgba(0, 0, 0, 0.35);
@@ -113,6 +113,10 @@
         display:block;
         opacity: 1;
         pointer-events: all;
+    }
+    &#subMenu-choixLangue {
+        text-align: left;
+        width: 12rem;
     }
     .ds44-list {
         padding: 2rem;
@@ -156,7 +160,6 @@
     }
 }
 .dobree-header .ds44-logoContainer img {
-  height: 46px;
   margin-left: 4em;
 }
 .dobree-header.ds44-header .ds44-colRight {
@@ -171,7 +174,6 @@
             background-color: rgba(0, 0, 0, 0.06);
             color: $ds44-dark ;
             transition: all ease-in-out .25s;
-            color: $ds44-light ;
 
             a {
                 text-decoration: none;
@@ -207,6 +209,12 @@
     .choixLangue {
         background-color: rgba(0, 0, 0, 0.6);
         color: $ds44-light ;
+    }
+    .ds44-subMenu {
+        background-color: rgba(0, 0, 0, 0.6);
+        &#subMenu-choixLangue a {
+            color: $ds44-light ;
+        }
     }
 }
 
