Dobree : modifs structure page

--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -37,19 +37,19 @@
                     <p aria-level="4" role="heading" class="ds44-mb1">Nos autres sites web</p>
                     <ul class="ds44-list">
                         <li>
-                            <a href="#" class="dobree-link-2">Espaces collections</a>
+                            <a href="#" class="dobree-link">Espaces collections</a>
                         </li>
                         <li>
-                            <a href="#" class="dobree-link-2">Espace ressources éducatives</a>
+                            <a href="#" class="dobree-link">Espace ressources éducatives</a>
                         </li>
                         <li>
-                            <a href="#" class="dobree-link-2">Catalogue des bibliothèques spécialisées</a>
+                            <a href="#" class="dobree-link">Catalogue des bibliothèques spécialisées</a>
                         </li>
                         <li>
-                            <a href="#" class="dobree-link-2">Compagnon de visite</a>
+                            <a href="#" class="dobree-link">Compagnon de visite</a>
                         </li>
                         <li>
-                            <a href="#" class="dobree-link-2">Grand patrimoine de Loire-Atlantique</a>
+                            <a href="#" class="dobree-link">Grand patrimoine de Loire-Atlantique</a>
                         </li>
                     </ul>
                 </div>
@@ -57,10 +57,10 @@
                     <p aria-level="4" role="heading" class="ds44-mb1">Nous soutenir</p>
                     <ul class="ds44-list">
                         <li>
-                            <a href="#" class="dobree-link-2">Partenaires</a>
+                            <a href="#" class="dobree-link">Partenaires</a>
                         </li>
                         <li>
-                            <a href="#" class="dobree-link-2">Amis du musée</a>
+                            <a href="#" class="dobree-link">Amis du musée</a>
                         </li>
                     </ul>
                 </div>
