--- a/docs/_includes/images/inc-video-dobree.html
+++ b/docs/_includes/images/inc-video-dobree.html
@@ -11,7 +11,7 @@
             <p>
                 <a href="#" class="logoLA ds44-flex-container ds44-flex-valign-center ds44-text--colorInvert ds44-hide-tinyToLarge">
                     <picture class="ds44-logo"><img src="../../assets/images/logos/logo-LA-white.svg" alt=""></picture>
-                    <span>Un musée du Département de Loire-Atlantique</span>
+                    <span>Un musée du Département<br> de Loire-Atlantique</span>
                 </a>
             </p>
             {% include composants-transverses/inc-fleche-ancre.html anchor="#video-anchor" %}
