--- a/docs/_includes/titres/main-title-text.html
+++ b/docs/_includes/titres/main-title-text.html
@@ -1,5 +1,5 @@
 <section class="ds44--xxl-padding-tb">
-	<div class="ds44-inner-container ds44--xxl-padding-tb">
+	<div class="ds44-container-large ds44--xxl-padding-tb">
 		<div class="ds44-grid12-offset-1">
             <div class="ds44-flex-container ds44-flex-valign-center ds44-medium-flex-col ds44-fgap1 ds44-mb3">
                 <div class="ds44-fl3">
