--- a/framework/scss/components/_collapser.scss
+++ b/framework/scss/components/_collapser.scss
@@ -78,14 +78,14 @@
       .ds44-collapser_button {
           background: $ds44-contextual-color;
           font-size: 1.875em;
-          padding: 2rem 3.5rem 2rem 3rem;
+          padding: 2rem 8.333% 2rem 8.333%;
 
           @media (max-width: $medium - .0625) {
               font-size: 1.25em;
           }
 
           .icon {
-              right: 3rem;
+              right: 8.333%;
               top: 2rem;
             }
       }
