--- a/docs/_includes/card/card--dobree.html
+++ b/docs/_includes/card/card--dobree.html
@@ -1,10 +1,7 @@
 <section class="ds44-card ds44-js-card ds44-card--dobree ds44-box ds44-bgGray ds44-container-imgZoom">
     {% if include['has-picture'] == 'true' %}
-    <picture class="ds44-container-imgRatio">
+    <picture class="ds44-container-imgRatio  {% if include.video %}  dobree-icon-player {% endif %}">
       <img src="../../assets/images/ds44-logo--sampleImg.png" alt="" class="ds44-imgRatio"/>
-      {% if include['has-video'] == 'true' %}
-      <img src="../../assets/icons/icon-player.svg" alt="" class="dobree-icon-player"/>
-      {% endif %}
     </picture>
     {% endif %}
     <div class="ds44-card__section">
