--- a/docs/_includes/menu/inc-menu-dobree.html
+++ b/docs/_includes/menu/inc-menu-dobree.html
@@ -13,10 +13,10 @@
 
                         <div class="ds44--xl-padding ds44-flex-container ds44-small-flex-col">
                             <div class="ds44-fieldContainer ds44-fg1">
-                                {% include form/field/input/standard.html label="Saisissez un ou plusieurs mots-clé"  class="ds44-inpLarge" %}
+                                {% include form/field/input/standard.html label="Saisissez un ou plusieurs mots-clé" %}
                             </div>
                             <div class="ds44-fieldContainer ds44-small-fg1">
-                                <button type="submit" class="ds44-btnStd ds44-btn--invert ds44-btnStd--large" title="Valider votre recherche par mots-clés">
+                                <button type="submit" class="ds44-btnStd ds44-btn--invert" title="Valider votre recherche par mots-clés">
                                     <span class="ds44-btnInnerText">Valider</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i>
                                 </button>
                             </div>
