Dobree : modification titres

--- a/docs/_includes/card/card--focus-objet.html
+++ b/docs/_includes/card/card--focus-objet.html
@@ -7,7 +7,7 @@
    </div>
     <div class="ds44-card__section--horizontal">
       {% if include.date %}<p class="date">{{ include.date }}</p>{% endif %}
-      <p role="heading" aria-level="{{ include.arialevel }}" class="ds44-card__title h3-like dobree-title dobree-title--helvetica">{{ include.title }}</p>
+      <p role="heading" aria-level="{{ include.arialevel }}" class="ds44-card__title h2-like dobree-title">{{ include.title }}</p>
       <p><a class="ds44-btnStd ds44-btn--contextual"><span class="ds44-btnInnerText">Découvrir l'objet</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>
     </div>
   </div>
