Dobree : Accessibilité SD-35

--- a/docs/_includes/images/inc-mosaiques_img-base.html
+++ b/docs/_includes/images/inc-mosaiques_img-base.html
@@ -4,6 +4,6 @@
     </button>
     <figcaption class="ds44-imgCaption">{{ include.legend }}</figcaption>
     {% if include.pictoFullscreen == 'true' %}
-      <button class="ds44-btnIco ds44-btnIco--carre ds44-bgDark"><i class="icon icon-fullscreen" aria-hidden="true"></i><span class="visually-hidden">Plein écran</span></button>
+      <p class="ds44-btnIco ds44-btnIco--carre ds44-bgDark"><i class="icon icon-fullscreen" aria-hidden="true"></i></p>
     {% endif %}
 </figure>
