--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -25,16 +25,17 @@
             			</p>
                     </div>
                     <ul class="ds44-list ds44-flex-container">
-                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Facebook - nouvelle fenêtre"><i class="icon icon-facebook" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Facebook</span></a></li>
-                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Twitter - nouvelle fenêtre"><i class="icon icon-twitter" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Twitter</span></a></li>
-                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur linkedin - nouvelle fenêtre"><i class="icon icon-linkedin" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Linkedin</span></a></li>
-                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Département de Loire-Atlantique sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Département de Loire-Atlantique sur Instagram</span></a></li>
+                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Musée Dobrée sur Facebook - nouvelle fenêtre"><i class="icon icon-facebook" aria-hidden="true"></i><span class="visually-hidden">Le Musée Dobrée sur Facebook</span></a></li>
+                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Musée Dobrée sur X - nouvelle fenêtre"><i class="icon icon-x" aria-hidden="true"></i><span class="visually-hidden">Le Musée Dobrée sur X</span></a></li>
+                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Musée Dobrée sur linkedin - nouvelle fenêtre"><i class="icon icon-linkedin" aria-hidden="true"></i><span class="visually-hidden">Le Musée Dobrée sur Linkedin</span></a></li>
+                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Musée Dobrée sur Viméo - nouvelle fenêtre"><i class="icon icon-vimeo" aria-hidden="true"></i><span class="visually-hidden">Le Musée Dobrée sur Viméo</span></a></li>
+                        <li><a href="#" target="_blank" class="ds44-rsFootLink" title="Le Musée Dobrée sur Instagram - nouvelle fenêtre"><i class="icon icon-instagram" aria-hidden="true"></i><span class="visually-hidden">Le Musée Dobrée sur Instagram</span></a></li>
                     </ul>
                 </div>
             </div>
             <div class="grid-12-small-1 has-gutter-l ds44-mb2">
                 <div class="col-6-small-1 ds44-mb2">
-                    <p aria-level="4" role="heading" class="ds44-mb1">Nos autres sites web</p>
+                    <p role="heading" aria-level="2" class="ds44-mb1">Nos autres sites web</p>
                     <ul class="ds44-list">
                         <li>
                             <a href="#" class="dobree-link">Espaces collections</a>
@@ -54,7 +55,7 @@
                     </ul>
                 </div>
                 <div class="col-6-small-1 ds44-mb2">
-                    <p aria-level="4" role="heading" class="ds44-mb1">Nous soutenir</p>
+                    <p role="heading" aria-level="2" class="ds44-mb1">Nous soutenir</p>
                     <ul class="ds44-list">
                         <li>
                             <a href="#" class="dobree-link">Partenaires</a>
@@ -83,8 +84,10 @@
         </a>
         <div class="ds44-flex-container ds44-flex-valign-center ds44--xl-padding-lr">
             <p>Le musée est labellisé :</p>
-            <a href="#"><picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo-qualite-toursime.svg" alt="Logo Qualité Tourisme"></picture></a>
-            <a href="#"><picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo_Tourisme_Handi.svg" alt="Logo Tourisme et Handicap - République Française"></picture></a>
+            <ul class="ds44-list ds44-flex-container ds44-small-flex-col">
+                <li><a href="#"><picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo-qualite-toursime.svg" alt="Label Qualité Tourisme"></picture></a></li>
+                <li><a href="#"><picture class="ds44-logo"><img src="../../assets/images/logos/footer/logo_Tourisme_Handi.svg" alt="Label Tourisme et Handicap - République Française"></picture></a></li>
+            </ul>
         </div>
     </section>
 
