--- a/framework/scss/components/_overlays.scss
+++ b/framework/scss/components/_overlays.scss
@@ -104,6 +104,9 @@
 .ds44-modal-gab {
     padding: $ds44-padding-box;
     margin-top: $ds44-padding-box;
+    p.ds44-btnIco--carre {
+        display: none;
+    }
 }
 
 .ds44-modal-column {
