--- a/docs/_includes/footer/footer-dobree.html
+++ b/docs/_includes/footer/footer-dobree.html
@@ -35,7 +35,7 @@
             </div>
             <div class="grid-12-small-1 has-gutter-l ds44-mb2">
                 <div class="col-6-small-1 ds44-mb2">
-                    <p role="heading" aria-level="2" class="ds44-mb1">Nos autres sites web</p>
+                    <p role="heading" aria-level="2" class="ds44-mb1">Nos autres sites <span lang="en">web</span></p>
                     <ul class="ds44-list">
                         <li>
                             <a href="#" class="dobree-link">Espaces collections</a>
