--- a/docs/_includes/card/card--tarifs.html
+++ b/docs/_includes/card/card--tarifs.html
@@ -11,7 +11,7 @@
           <li><span class="txtTarif">Tarif plein</span><span class="tarif">X €</span></li>
           <li><span class="txtTarif">Tarif réduit</span><span class="tarif">X €</span></li>
       </ul>
-      <p><a class="ds44-btnStd ds44-btn--contextual" href="/"><i class="icon icon-md-ticket" aria-hidden="true"></i><span class="ds44-btnInnerText">Réservez</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>
+      <p><a class="ds44-btnStd ds44-btn--contextual" href="/"><i class="icon icon-md-ticket icon--medium" aria-hidden="true"></i><span class="ds44-btnInnerText">Réservez</span><i class="icon icon-long-arrow-right" aria-hidden="true"></i></a></p>
     </div>
   </div>
 </section>
